# serializer version: 1
# name: test_maintenance[no_description]
  '''
  <main class="s-main" id="main" role="main">
      <div aria-atomic="true" aria-live="polite" class="toast-container">
      </div>
      <section class="s-title-02">
          <div class="s-title-02__container container">
              <div class="s-title-02__row row">
                  <div class="s-title-02__col col-12">
                      <div class="c-title">
                          <div class="c-title__main">
                              <h1>
                                  Maintenance
                              </h1>
                          </div>
                      </div>
                  </div>
              </div>
          </div>
      </section>
      <section class="s-section">
          <div class="s-section__container container">
              <div class="row">
                  <div class="col-12">
                      <p>
                          Le service est actuellement en maintenance, revenez dans quelques minutes.
                      </p>
                  </div>
              </div>
          </div>
      </section>
  </main>
  
  '''
# ---
# name: test_maintenance[with_description]
  '''
  <main class="s-main" id="main" role="main">
      <div aria-atomic="true" aria-live="polite" class="toast-container">
      </div>
      <section class="s-title-02">
          <div class="s-title-02__container container">
              <div class="s-title-02__row row">
                  <div class="s-title-02__col col-12">
                      <div class="c-title">
                          <div class="c-title__main">
                              <h1>
                                  Maintenance
                              </h1>
                          </div>
                      </div>
                  </div>
              </div>
          </div>
      </section>
      <section class="s-section">
          <div class="s-section__container container">
              <div class="row">
                  <div class="col-12">
                      <p>
                          Oups
                      </p>
                  </div>
              </div>
          </div>
      </section>
  </main>
  
  '''
# ---
